# DSCI-532_2026_9_burnout-checkup

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  description.md  environment.yml  pyproject.toml  requirements.txt  team.txt
burnout_checkup.egg-info/: PKG-INFO  SOURCES.txt
data/processed/: ai_productivity.parquet
notebooks/: eda_analysis.ipynb  on_tool_request.ipynb  querychat_prompt_experiments.ipynb  querychat_resonse_style_experiment.ipynb  querychat_response_style_experiment.ipynb  user_facing_control_exp.ipynb
notebooks/outputs/: querychat_response_style_evaluation_results.csv  querychat_response_style_evaluation_template.csv  querychat_response_style_experiment_results.csv  querychat_response_style_experiments.csv  querychat_response_style_scores.csv  querychat_style_summary_compact.csv  querychat_style_summary_detailed.csv
reports/: m1_proposal.md  m2_spec.md
src/: __init__.py  app.py  charts.py  data.py  filters.py  kpis.py
src/constants/: __init__.py  paths.py  theme.py
src/prompts/: system_prompt.md
src/scripts/: convert_to_parquet.py
src/utils/: debug.py
src/www/: styles.css
tests/: test_charts.py  test_data.py  test_debug.py  test_filters.py  test_kpis.py
tests/e2e/: test_ai_explorer.py  test_filter_behavior.py  test_reset_filters.py
